# PythonDevelopment2023

./: .gitignore  Pipfile  README.md  dodo.py
client/: pyproject.toml
client/client/: __main__.py  board.py  client.pot  game.py  pieces.py  server_api.py
client/client/translation/: client.pot
client/client/translation/ru/LC_MESSAGES/: client.po
docs/source/: conf.py  index.rst  issue_documentation.rst
server/: pyproject.toml
server/server/: __main__.py  server.py
test/: test_board.py  test_pieces.py
