[project]
name = "Chess_client"
version = "0.0.1"
description = "Client for Chess"
requires-python = ">=3.10"
authors = [{name = "Basalov Iaroslav", email = "s02200273@gse.cs.msu.ru"}]
keywords = ["chess", "client"]
classifiers = [
    "Development Status :: 5",
    "Programming Language :: Python :: 3",
]

dependencies = ["pygame"]

[project.urls]
repository = "https://github.com/Marilius/PythonDevelopment2023"

[build-system]
requires = ["alabaster", "Babel", "build", "doit", "flake8", "pybabel", "pycodestyle", "pydocstyle", "pyflakes", "pyreadline3", "setuptools", "Sphinx", "pygame"]
build-backend = "setuptools.build_meta"

[project.scripts]
chess-client = "client.__main__:run"

[tool.setuptools.package-data]
client = ["translation/*/*/*.mo"]
